Header Alignment fix
Header Alignment fix

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/header.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-common/css/header.less
@@ -150,6 +150,10 @@
         display: none;
       }
 
+      &_nav-links-container {
+        flex: 1;
+      }
+
       &__hamburger-section {
         display: none;
       }
