--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/header.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-manufacturing/css/header.less
@@ -58,3 +58,11 @@
     right: 5%;
   }
 }
+
+@media (min-width: 1024px) {
+  .header .gu-header {
+    &_logo-container {
+      flex: 0 0 25%;
+    }
+  }
+}
